--- a/ShareKakeibo/View/DetailCell.xib
+++ b/ShareKakeibo/View/DetailCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="ShareKakeibo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="Kakeibo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -97,6 +97,7 @@
                 <outlet property="paymentLabel" destination="aEq-gh-lRP" id="ZMd-7E-AuG"/>
                 <outlet property="profileImage" destination="LTk-Zn-Vkv" id="qSY-S2-jNv"/>
                 <outlet property="userNameLabel" destination="UxC-3k-wXA" id="cGU-wQ-qRT"/>
+                <outlet property="view" destination="Te3-eQ-07v" id="dm6-DB-bld"/>
             </connections>
             <point key="canvasLocation" x="95.652173913043484" y="110.15625"/>
         </tableViewCell>
