--- a/ShareKakeibo/View/DetailCell.xib
+++ b/ShareKakeibo/View/DetailCell.xib
@@ -10,16 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="Kakeibo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="ShareKakeibo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="Te3-eQ-07v">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Te3-eQ-07v">
                         <rect key="frame" x="5" y="7" width="380" height="70"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.3.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="LTk-Zn-Vkv">
                                 <rect key="frame" x="8" y="5.5" width="60" height="60"/>
@@ -89,6 +88,12 @@
                     </view>
                 </subviews>
                 <color key="backgroundColor" red="0.97254908080000002" green="0.94901961089999998" blue="0.9529411793" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <constraints>
+                    <constraint firstItem="Te3-eQ-07v" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="1wz-Kj-IbR"/>
+                    <constraint firstAttribute="bottom" secondItem="Te3-eQ-07v" secondAttribute="bottom" constant="8" id="85V-x8-De6"/>
+                    <constraint firstItem="Te3-eQ-07v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="O7O-sy-TQW"/>
+                    <constraint firstAttribute="trailing" secondItem="Te3-eQ-07v" secondAttribute="trailing" constant="5" id="iLL-WS-Eb1"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
