--- a/ShareKakeibo/View/DetailCell.xib
+++ b/ShareKakeibo/View/DetailCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="ShareKakeibo" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="112" id="KGk-i7-Jjw" customClass="DetailCell" customModule="Kakeibo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -89,10 +89,10 @@
                 </subviews>
                 <color key="backgroundColor" red="0.97254908080000002" green="0.94901961089999998" blue="0.9529411793" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
-                    <constraint firstItem="Te3-eQ-07v" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="1wz-Kj-IbR"/>
-                    <constraint firstAttribute="bottom" secondItem="Te3-eQ-07v" secondAttribute="bottom" constant="8" id="85V-x8-De6"/>
-                    <constraint firstItem="Te3-eQ-07v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="O7O-sy-TQW"/>
-                    <constraint firstAttribute="trailing" secondItem="Te3-eQ-07v" secondAttribute="trailing" constant="5" id="iLL-WS-Eb1"/>
+                    <constraint firstItem="Te3-eQ-07v" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="B2a-jt-goe"/>
+                    <constraint firstAttribute="trailing" secondItem="Te3-eQ-07v" secondAttribute="trailing" constant="5" id="CJn-Zr-KOS"/>
+                    <constraint firstItem="Te3-eQ-07v" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="h6N-K5-Wjw"/>
+                    <constraint firstAttribute="bottom" secondItem="Te3-eQ-07v" secondAttribute="bottom" constant="8" id="s3w-uX-Q7b"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
